--- a/Lap5/Bai1.html
+++ b/Lap5/Bai1.html
@@ -11,17 +11,17 @@
 </head>
 <body>
     <p>
-        <img src="images/anh1.jpg" alt="">
-        <img src="images/anh2.jpg" alt="">
-        <img src="images/anh3.jpg" alt="">
-        <img src="images/anh4.jpg" alt="">
+        <img src="images/anh1.jpg" alt="1">
+        <img src="images/anh2.jpg" alt="2">
+        <img src="images/anh3.jpg" alt="3">
+        <img src="images/anh4.jpg" alt="4">
     </p>
     <br>
     <p>
-        <img src="images/anh5.jpg" alt="">
-        <img src="images/anh6.jpg" alt="">
-        <img src="images/anh7.jpg" alt="">
-        <img src="images/anh8.jpg" alt="">
+        <img src="images/anh5.jpg" alt="5">
+        <img src="images/anh6.jpg" alt="6">
+        <img src="images/anh7.jpg" alt="7">
+        <img src="images/anh8.jpg" alt="8">
     </p>
 </body>
 </html>
