--- a/Assignment/AsmGd2.html
+++ b/Assignment/AsmGd2.html
@@ -54,19 +54,58 @@
             </div> 
         </div>
         <article>
-
+            <div class="tin-tuc">
+                <h2>Tin Tức - Sự Kiện</h2>
+                <div class="tt1">
+                    <img src="images/tintuc1.png" alt="a1" width="100">
+                    <a href="http://thptnguyenhue.quangtri.edu.vn/tin-tuc-su-kien/hoat-dong-ngoai-gio-len-lop-voi-chu-de-thanh-nien-voi-viec-giu-gin-ban-sac-van-hoa-dan-toc-.html">HOẠT ĐỘNG NGOÀI GIỜ LÊN LỚP VỚI CHỦ ĐỀ “THANH NIÊN VỚI VIỆC GIỮ GÌN BẢN SẮC VĂN HÓA DÂN TỘC”</a>
+                </div><br>
+                <br>
+                <div class="tt2">
+                    <img src="images/tintuc2.jpg" alt="a2" width="100">
+                    <a href="http://thptnguyenhue.quangtri.edu.vn/tin-tuc-su-kien/truong-thpt-nguyen-hue-to-chuc-thanh-cong-hoi-thi-khoa-hoc-ky-thuat-cap-truong-nam-hoc-2022-2023.html">TRƯỜNG THPT NGUYỄN HUỆ TỔ CHỨC THÀNH CÔNG HỘI THI KHOA HỌC KỸ THUẬT CẤP TRƯỜNG NĂM HỌC 2022-2023</a>
+                </div><br>
+                <br>
+                <div class="tt3">
+                    <img src="images/tintuc3.jpg" alt="a3" width="100">
+                    <a href="http://thptnguyenhue.quangtri.edu.vn/tin-tuc-su-kien/ung-dung-stem-trong-giang-day-phan-sinh-hoc-te-bao.html">ỨNG DỤNG STEM TRONG GIẢNG DẠY PHẦN SINH HỌC TẾ BÀO</a>
+                </div><br>
+                <br>
+            </div>
+            <br>
+            <div class="ban-do">
+                <iframe src="https://www.google.com/maps/d/embed?mid=1XtImLt3V5_EL4f0R9Ikva8oz84XlRRw&ehbc=2E312F" width="300" height="200"></iframe>
+            </div>
         </article>
         <aside>
+            <div class="table">
+                <div class="bang1">
+                    <table>
+                        
+                    </table>
+                </div>
+
+            </div>
+
+
 
         </aside>
         <footer>
-            <nav class="menu1">
+            <nav class="menu2">
                 <a href="#">Trang chủ |</a>
                 <a href="#">Giới thiệu |</a>
                 <a href="#">Góp ý |</a>
                 <a href="#">Liên hệ |</a>
                 <a href="#">Hỏi đáp</a>
             </nav>
+            <div class="sdt-dc">
+                <div class="sdt">
+                    0327 807 250 
+                </div>
+                <div class="dc">
+                    <a href="https://www.google.com/maps/d/edit?mid=1XtImLt3V5_EL4f0R9Ikva8oz84XlRRw&usp=sharing">85 Nguyễn Trãi, Phường 3, Quảng Trị</a>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
