--- a/Assignment/AsmGd2.html
+++ b/Assignment/AsmGd2.html
@@ -28,19 +28,20 @@
         if(10>se){se="0"+se}
         document.getElementById("clockDiv").innerHTML="Hôm nay: "+a+", "+d+" / "+m+" / "+y+" - "+h+":"+mi+":"+se+"";
         }
-        </script>
+    </script>
+    <script src="https://kit.fontawesome.com/fade33c73f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
         <header>
-            <img src="images/logoNH.png" alt="logo1" width="100%">
+            <img src="images/logoNH.png" alt="logo1" width="100%" height="100px">
         </header>
         <div class="menu">
             <nav class="menu1">
-                <a href="#">Trang chủ |</a>
-                <a href="#">Giới thiệu |</a>
-                <a href="#">Góp ý |</a>
-                <a href="#">Liên hệ |</a>
+                <a href="#">Trang chủ </a>
+                <a href="#">Giới thiệu </a>
+                <a href="#">Góp ý </a>
+                <a href="#">Liên hệ </a>
                 <a href="#">Hỏi đáp</a>
             </nav>
         </div>
@@ -55,7 +56,7 @@
         </div>
         <article>
             <div class="tin-tuc">
-                <h2>Tin Tức - Sự Kiện</h2>
+                <h2><i class="fa-regular fa-newspaper"></i> Tin Tức - Sự Kiện</h2>
                 <div class="tt1">
                     <img src="images/tintuc1.png" alt="a1" width="100">
                     <a href="http://thptnguyenhue.quangtri.edu.vn/tin-tuc-su-kien/hoat-dong-ngoai-gio-len-lop-voi-chu-de-thanh-nien-voi-viec-giu-gin-ban-sac-van-hoa-dan-toc-.html">HOẠT ĐỘNG NGOÀI GIỜ LÊN LỚP VỚI CHỦ ĐỀ “THANH NIÊN VỚI VIỆC GIỮ GÌN BẢN SẮC VĂN HÓA DÂN TỘC”</a>
@@ -78,32 +79,84 @@
             </div>
         </article>
         <aside>
-            <div class="table">
-                <div class="bang1">
-                    <table>
-                        
-                    </table>
+            <div class="td1">
+                <div class="panel-heading">
+                    <div class="panel-title"><strong style="font-size: 20px;"><i class="fa-solid fa-paper-plane"></i> Văn bản mới</strong></div>
                 </div>
-
+                <div class="panel-body">
+                    <div id="module24" class="ModuleWrapper">
+                        <section id="section24" class="tq">
+                            <div class="legal-document-listType1"> 
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/cai-cach-hanh-chinh/hien-dai-nen-hanh-chinh/ung-dung-cong-nghe-thong-tin/cong-van-so-305-sgddt-qlclcntt-ngay-15-02-2023-ve-lap-danh-sach-de-nghi-cap-the-cccd-gan-chip-tai-khoan-dinh-danh-dien-t.html"><i class="fa-solid fa-arrow-right"></i>    
+                                        Công văn số 305/SGDĐT-QLCLCNTT ngày 15/02/2023 về lập danh sách đề nghị cấp thẻ CCCD gắn chíp, tài khoản định danh  điện tử cho cán bộ, giáo viên, học sinh.  </a>
+                                </div>
+                            </div><br>
+                            <div class="legal-document-listType1">  
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/cai-cach-hanh-chinh/ke-hoach-he-thong-hoa-van-ban-quy-pham-phap-luat-ky-2019-2023-nganh-giao-duc-va-dao-tao-tinh-quang-tri.html"><i class="fa-solid fa-arrow-right"></i>
+                                        Kế hoạch hệ thống hóa văn bản quy phạm pháp luật kỳ 2019 - 2023 ngành Giáo dục và Đào tạo tỉnh Quảng Trị. </a>
+                                </div>
+                            </div><br>
+                            <div class="legal-document-listType1">  
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/trang-chu/thi-dua-khen-thuong/quyet-dinh-tang-bang-khen-cua-chu-tich-ubnd-tinh-cho-giao-vien-dat-thanh-tich-tai-cuoc-thi-viet-nhung-ky-niem-sau-sac-ve.html"><i class="fa-solid fa-arrow-right"></i>
+                                        Quyết định tặng Bằng khen của Chủ tịch UBND tỉnh cho giáo viên đạt thành tIch tai  Cuộc thi viết "Những kỷ niệm sâu sắc về thầy cô và mái trường" näm 2022.  </a>
+                                </div>
+                            </div><br>
+                            <div class="legal-document-listType1">  
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/van-ban-cong-van/van-ban-so-gd-dt/cong-van-so-220-sgddt-qlclcntt-ngay-07-02-2023-ve-to-chuc-ky-thi-chon-hsgqg-thpt-nam-hoc-2022-2023-tai-tinh-quang-tri.html"><i class="fa-solid fa-arrow-right"></i>
+                                        Công văn số 220/SGDĐT-QLCLCNTT ngày 07/02/2023 về tổ chức Kỳ thi chọn HSGQG THPT  năm học 2022-2023 tại tỉnh Quảng Trị.  </a>
+                                </div>
+                            </div><br>
+                            <div class="legal-document-listType1">  
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/van-ban-cong-van/van-ban-so-gd-dt/cong-van-so-217-sgddt-qlclcntt-ngay-07-02-2023-ve-phoi-hop-cu-can-bo-giao-vien-di-coi-thi-ky-thi-chon-hsgqg-thpt-nam-hoc.html"><i class="fa-solid fa-arrow-right"></i>
+                                        Công văn số 217/SGDĐT-QLCLCNTT ngày 07/02/2023 về phối hợp cử cán bộ, giáo viên đi coi  thi Kỳ thi chọn HSGQG THPT năm học  2022-2023 tại thành phố Hà Nội.  </a>
+                                </div>
+                            </div><br>
+                            <div class="legal-document-listType1">  
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/he-thong-nghiep-vu/phong-chay-chua-chay-va-tim-kiem-cuu-nan/tiep-tuc-tang-cuong-cong-tac-quan-ly-su-dung-phao.html"><i class="fa-solid fa-arrow-right"></i>
+                                        Tiếp tục tăng cường công tác quản lý, sử dụng pháo.  </a>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
             </div>
-
-
-
+            <div class="td2">
+                <div class="panel-heading">
+                    <div class="panel-title"><strong style="font-size: 20px;"><i class="fa-solid fa-paper-plane"></i> Thông báo - Giới thiệu</strong>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div id="module29" class="ModuleWrapper" modulerootid="2721068">
+                        <section id="section29" class="section-list-legalddocument section-legaldocument-list-type3 Article-LegalDocument-Detail-listType1">      
+                            <div class="legal-document-listType1">  
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/cong-van-van-ban/thong-bao-gioi-thieu/thong-bao-cam-ket-chat-luong-giao-duc-cong-khai-doi-ngu-va-c.html"><i class="fa-solid fa-arrow-right"></i>
+                                        Thông báo cam kết chất lượng giáo dục, công khai đội ngũ và cơ sở vật chất, năm học 2020-2021.  </a>
+                                </div>
+                            </div><br>
+                            <div class="legal-document-listType1">  
+                                <div class="title">  
+                                    <a class="title-documment" href="http://thptnguyenhue.quangtri.edu.vn/cong-van-van-ban/ke-hoah-on-tap-thi-thpt-quoc-gia-nam-hoc-2018-2019.html"><i class="fa-solid fa-arrow-right"></i>
+                                        Kế hoah ôn tập thi THPT quốc gia năm học 2018-2019.  </a>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
         </aside>
-        <footer>
-            <nav class="menu2">
-                <a href="#">Trang chủ |</a>
-                <a href="#">Giới thiệu |</a>
-                <a href="#">Góp ý |</a>
-                <a href="#">Liên hệ |</a>
-                <a href="#">Hỏi đáp</a>
-            </nav>
+        <footer>   
             <div class="sdt-dc">
                 <div class="sdt">
-                    0327 807 250 
+                    SĐT: 0327 807 ***
                 </div>
                 <div class="dc">
-                    <a href="https://www.google.com/maps/d/edit?mid=1XtImLt3V5_EL4f0R9Ikva8oz84XlRRw&usp=sharing">85 Nguyễn Trãi, Phường 3, Quảng Trị</a>
+                    <a href="https://www.google.com/maps/d/edit?mid=1XtImLt3V5_EL4f0R9Ikva8oz84XlRRw&usp=sharing">Địa chỉ: 85 Nguyễn Trãi, Phường 3, Quảng Trị</a>
                 </div>
             </div>
         </footer>
