--- a/Assignment/AsmGd2.html
+++ b/Assignment/AsmGd2.html
@@ -34,12 +34,12 @@
 <body>
     <div id="container">
         <header>
-            <img src="images/logoNH.png" alt="logo1" width="100%" height="100px">
+            <img src="images/logoNH.png" alt="logo1" width="100%">
         </header>
         <div class="menu">
             <nav class="menu1">
                 <a href="#">Trang chủ </a>
-                <a href="#">Giới thiệu </a>
+                <a href="Gioithieu.html">Giới thiệu </a>
                 <a href="#">Góp ý </a>
                 <a href="#">Liên hệ </a>
                 <a href="#">Hỏi đáp</a>
