--- a/Assignment/gioiThieu.html
+++ b/Assignment/gioiThieu.html
@@ -7,8 +7,15 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <script src="https://kit.fontawesome.com/fade33c73f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="quay-lai">
+        <a href="AsmGd2.html"><i class="fa-solid fa-arrow-left"></i>
+            Quay lại
+        </a>
+    </div>
+    <hr>
     <div>
         <h1>
             Trường THPT Nguyễn Huệ 
