--- a/Assignment/AsmGd2.html
+++ b/Assignment/AsmGd2.html
@@ -38,7 +38,7 @@
         </header>
         <div class="menu">
             <nav class="menu1">
-                <a href="#">Trang chủ </a>
+                <a href="#"><i class="fa-solid fa-house"></i> Trang chủ </a>
                 <a href="Gioithieu.html">Giới thiệu </a>
                 <a href="#">Góp ý </a>
                 <a href="#">Liên hệ </a>
@@ -154,6 +154,12 @@
             <div class="sdt-dc">
                 <div class="sdt">
                     SĐT: 0327 807 ***
+                </div>
+                <div class="gmail">
+                    Gmail: truongthptnguyenhue.quangtri@edu.vn
+                </div>
+                <div class="web">
+                   <a href="http://thptnguyenhue.quangtri.edu.vn/">http://thptnguyenhue.quangtri.edu.vn</a>
                 </div>
                 <div class="dc">
                     <a href="https://www.google.com/maps/d/edit?mid=1XtImLt3V5_EL4f0R9Ikva8oz84XlRRw&usp=sharing">Địa chỉ: 85 Nguyễn Trãi, Phường 3, Quảng Trị</a>
